Allow to list occupancies for a given range and room
